; ModuleID = '/home/carl/AnghaBench/seafile/common/cdc/extr_rabin-checksum.c_fls64.c'
source_filename = "/home/carl/AnghaBench/seafile/common/cdc/extr_rabin-checksum.c_fls64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8 (i32)* @fls64 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal signext i8 @fls64(i32 %0) #0 {
  %2 = alloca i8, align 1
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = ashr i32 %5, 32
  store i32 %6, i32* %4, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %14

8:                                                ; preds = %1
  %9 = load i32, i32* %4, align 4
  %10 = call signext i8 @fls32(i32 %9)
  %11 = sext i8 %10 to i32
  %12 = add nsw i32 32, %11
  %13 = trunc i32 %12 to i8
  store i8 %13, i8* %2, align 1
  br label %17

14:                                               ; preds = %1
  %15 = load i32, i32* %3, align 4
  %16 = call signext i8 @fls32(i32 %15)
  store i8 %16, i8* %2, align 1
  br label %17

17:                                               ; preds = %14, %8
  %18 = load i8, i8* %2, align 1
  ret i8 %18
}

declare dso_local signext i8 @fls32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
